
	* models.h: added declaration of display_recordset_data().

	* models.c (display_recordset_data): new function to show all the data
	associated with a recordset (column name, data type, scale...).
	(display_data_model): free the string returned by
	gda_value_stringify(). Removed warnings.

	* postgres-test.c: use the new function in models.c

2002-01-12  Rodrigo Moya <rodrigo@gnome-db.org>

	* Makefile.am: added models.h to _SOURCES for distcheck

2002-01-11  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* *.[ch]: assign copyright to the GNOME Foundation.

2002-01-10  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* client.c: include postgres-test.h.  Moved postgres tests to the
	new files.
	(open_connection()): Correctly guess the provider.

	* postgres-test.[ch]: new.

	* models.h: new file to show the functions available in models.c.

	* Makefile.am: added postgres-test.[ch].

2002-01-09  Rodrigo Moya <rodrigo@gnome-db.org>

	* client.c (display_row_data): on the client side, we use
	GdaRecordset's, not GdaServerRecordset's

2002-01-08  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* client.c (show_schema()): changed value to be const.
	(do_postgres_test()):
	(display_row_data()):
	(open_connection()): new test specific to the postgres provider.

2002-01-02  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* client.c: also lists procedures and views (if any). Shows the number
	of procedures, tables, types and views.
	
2001-12-30  Rodrigo Moya <rodrigo@gnome-db.org>

	* client.c (show_schemas): added types schema

2001-12-28  Rodrigo Moya <rodrigo@gnome-db.org>

	* client.c (show_schemas): new function for showing database schema
	objects from the tested connections

2001-12-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* client.c: added gda_connection_supports test

	* gda-xmldb-test.c: removed. All tests will be in gda-test

2001-11-20  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* client.c: added rollback test.
